--- a/Exploratory_analysis.Rmd
+++ b/Exploratory_analysis.Rmd
@@ -1,5 +1,139 @@
 ---
 title: "Exploratory analysis"
-output: html_document
+output: github_document
 date: "2023-09-28"
 ---
+
+```{r}
+library(tidyverse)
+library(ggridges)
+```
+
+
+```{r}
+weather_df = 
+  rnoaa::meteo_pull_monitors(
+    c("USW00094728", "USW00022534", "USS0023B17S"),
+    var = c("PRCP", "TMIN", "TMAX"), 
+    date_min = "2021-01-01",
+    date_max = "2022-12-31") |>
+  mutate(
+    name = recode(
+      id, 
+      USW00094728 = "CentralPark_NY", 
+      USW00022534 = "Molokai_HI",
+      USS0023B17S = "Waterhole_WA"),
+    tmin = tmin / 10,
+    tmax = tmax / 10) |>
+  select(name, id, everything())
+
+
+weather_df
+
+```
+
+
+```{r}
+ggplot(weather_df, aes(x = tmin, y = tmax)) +
+  geom_point()
+```
+
+```{r}
+weather_df |> 
+  ggplot(aes(x=tmin,y=tmax)) + 
+  geom_point()
+```
+
+
+```{r}
+ggplot(weather_df, aes(x = tmin, y = tmax, color = name)) +
+  geom_point(aes(color = name)) +
+  geom_smooth()
+  
+```
+
+
+```{r}
+ggplot(weather_df, aes(x = tmin, y = tmax)) +
+  geom_point(aes(color = name), alpha = 0.3) +
+  geom_smooth(se = FALSE)
+```
+
+
+```{r}
+ggplot(weather_df, aes(x = tmin, y = tmax, color = name)) +
+  geom_point(aes(alpha = 0.3)) +
+  geom_smooth() +
+  facet_grid(. ~ name)
+```
+
+```{r}
+ggplot(weather_df, aes(x = date, y = tmax, color = name)) +
+  geom_point(aes(size = prcp), alpha = .3) +
+  geom_smooth() +
+  facet_grid(. ~ name)
+```
+
+```{r}
+weather_df |> 
+  ggplot(aes(x = tmin, y = tmax)) +
+  geom_hex()
+```
+
+```{r}
+ggplot(weather_df, aes(x = tmax, fill = name)) +
+  geom_density(alpha=0.3)
+```
+
+```{r}
+ggplot(weather_df, aes(y = tmax, x = name)) +
+  geom_boxplot()
+```
+
+```{r}
+ggplot(weather_df, aes(y = tmax, x = name)) +
+  geom_violin()
+```
+
+```{r}
+ggplot(weather_df, aes(x = tmax, y = name)) +
+  geom_density_ridges()
+```
+
+
+```{r}
+my_graph =
+ggplot(weather_df, aes(x = tmin, y = tmax, color = name)) +
+  geom_point(aes(color = name), alpha = 0.3) +
+  geom_bin_2d(aes(color = "red"), alpha = 0.3) +
+  geom_violin(aes(color = "blue"), fill = "yellow") +
+  geom_hex(fill = "brown") +
+  geom_smooth(aes(size = prcp)) +
+  geom_abline() +
+  geom_path() +
+  geom_boxplot() +
+  geom_jitter() +
+  geom_rug() +
+  geom_function() +
+  geom_step() +
+  stat_smooth() +
+  geom_polygon() +
+  geom_line() +
+  geom_raster() +
+  geom_tile() +
+  ggtitle("My Graph")
+  
+ggsave("results/mygraph.pdf")
+```
+
+```{r, fig.width = 12, fig.height = 12}
+my_graph
+```
+
+```{r, fig.width = 6, fig.asp = 0.6}
+my_graph
+```
+
+
+
+
